--- a/eureka-server/src/main/resources/bootstrap.yml
+++ b/eureka-server/src/main/resources/bootstrap.yml
@@ -2,4 +2,4 @@ spring:
   # the eureka server has to connect to config server first to get the configuration
   cloud:
     config:
-      uri: http://config:password@localhost:8888
+      uri: ${CONFIG_URL:http://config:password@localhost:8888}
