--- a/foo-service/src/main/resources/bootstrap.yml
+++ b/foo-service/src/main/resources/bootstrap.yml
@@ -14,5 +14,5 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka:eureka-dev@localhost:8761/eureka/
+      defaultZone: ${EUREKA_SERVER_URL:http://eureka:eureka-dev@localhost:8761/eureka/}
 
